# lceLIB

./: CMakeLists.txt  README.md  __include.hpp  enums.cpp  enums.hpp  enums2.hpp  include.hpp  processor.hpp  titleUpdate.hpp
blocks/: __include.hpp  block.cpp  block.hpp  blockID.hpp  blockProperties.hpp  blockStates.hpp  block_ids.hpp  block_states.hpp  blocks.cpp  blocks.hpp  blocksInit.cpp  blocksInit.hpp  downgrade.hpp  mapcolors.hpp
include/: RegistryNamespaced.cpp  RegistryNamespaced.hpp  picture.cpp  picture.hpp  stb_image.h  stb_image.hpp  stb_image_write.h  stb_image_write.hpp
items/: Item.hpp  block_ids.hpp  blocks.hpp  enums.hpp  itemID.hpp  item_ids.hpp  items.hpp  itemsInit.hpp  mapcolors.hpp  types.hpp
registry/: blockRegistry.cpp  blockRegistry.hpp  itemRegistry.cpp  itemRegistry.hpp  textureRegistry.cpp  textureRegistry.hpp
texture/: TextureMap.hpp  textureMap.cpp  textureMap.hpp
